--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,6 @@ compiler = "1.5.9"
 material = "1.2.0"
 coroutines = "1.8.0"
 navigation = "2.7.7"
-okhttp = "5.0.0-alpha.12"
 
 # Ktx
 core-ktx = "1.12.0"
@@ -32,7 +31,6 @@ core = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 compose = { group = "androidx.compose", name = "compose-bom", version.ref = "compose" }
 splash = { group = "androidx.core", name = "core-splashscreen", version.ref = "splash" }
 koin = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
-okhttp = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 detekt = { group = "io.gitlab.arturbosch.detekt", name = "detekt-formatting", version.ref = "detekt" }
 navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
 lifecycle = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-ktx" }
@@ -40,8 +38,8 @@ activity-compose = { group = "androidx.activity", name = "activity-compose", ver
 coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
 
 # Ktor
+ktor-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
 ktor-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
-ktor-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.ref = "ktor" }
 ktor-logging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktor" }
 ktor-negotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktor" }
@@ -97,7 +95,6 @@ core = [
     "coil",
     "koin",
     "core",
-    "okhttp",
     "splash",
     "lifecycle",
     "navigation",
@@ -113,8 +110,8 @@ core = [
     "ui-animation",
     "ui-foundation",
     # Client HTTP
+    "ktor-cio",
     "ktor-core",
-    "ktor-okhttp",
     "ktor-logging",
     "ktor-negotiation",
     "ktor-serialization"
